[package]
name = "kotlike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0",features = ["fold", "full"] }
quote = "1"
proc-macro2 = { version = "1", features = ["nightly"] }
regex = "1"